<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
   <!-- <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>
-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_sec"
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/img_close"
            android:text="@string/view_and_send"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:padding="3dp"
            app:srcCompat="@drawable/ic_close_white_24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/pdf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/style_sec"
                android:id="@+id/doc_img"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@id/button_send_email"
                android:background="@drawable/submit_btn"
                android:padding="5dp"
                android:text="@string/view"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_send_email"
                style="@style/style_sec"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/submit_btn"
                android:padding="5dp"
                android:text="@string/send_email"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
</layout>