<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/range_of_recurence"
        style="@style/header_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/recyclerview"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/range_of_recurrence"
        tools:ignore="RtlSymmetry" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/schel_start"
                style="@style/style_sec_sec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/arimo_regular"
                android:gravity="center"
                android:text="@string/starting_on" />

            <TextView
                android:id="@+id/date_start"
                style="@style/style_sec_sec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/edittext_shap_qus"
                android:drawableEnd="@drawable/date_icon"
                android:drawablePadding="@dimen/tv_drawable_padding"
                android:gravity="center"
                android:padding="8dp"
                android:text="03-mar-2021"
                android:textSize="@dimen/medium_text_low"
                tools:ignore="HardcodedText,SpUsage" />

        </LinearLayout>

        <!--        <RadioGroup-->
        <!--            android:id="@+id/radio"-->
        <!--            style="@style/style_sec"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_marginStart="-2dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:divider="?android:attr/dividerHorizontal"-->
        <!--            android:gravity="left|center">-->

        <RadioButton
            android:id="@+id/radio_no_end_date"
            style="@style/style_thrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="-2dp"
            android:text="@string/no_end_date" />


        <!--Start End After occurance-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_end_after"
                style="@style/style_thrid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:gravity="center|start"
                android:padding="-2dp"
                android:text="@string/end_after" />

            <LinearLayout
                android:id="@+id/end_after_layout"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/layout_disable"
                android:orientation="horizontal"
                android:padding="2dp">

                <EditText
                    android:id="@+id/end_after_edt"
                    style="@style/add_recr_radio_style"
                    android:background="@android:color/transparent"
                    android:text="1"
                    android:visibility="invisible"
                    tools:ignore="Autofill,HardcodedText,LabelFor" />

                <LinearLayout
                    android:id="@+id/end_count_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/recyclerview"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/end_after_up_img"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_arrow_drop_up_24"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/end_after_down_img"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp"
                        tools:ignore="ContentDescription" />
                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/occurance"
                style="@style/style_thrid"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:baselineAligned="false"
                android:checked="true"
                android:gravity="center|start"
                android:text="@string/occurrences" />
        </LinearLayout>

        <!--Stop End After occurance-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_end_by"
                style="@style/style_thrid"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:padding="-2dp"
                android:text="@string/end_by" />


            <TextView
                android:id="@+id/end_date_by"
                style="@style/style_sec_sec"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/layout_disable"
                android:clickable="false"
                android:drawableEnd="@drawable/date_icon"
                android:drawablePadding="@dimen/tv_drawable_padding"
                android:gravity="start|center"
                android:padding="8dp"
                android:text=""
                android:textSize="@dimen/medium_text_low"
                tools:ignore="SpUsage" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/recur_job_days_msg"
        style="@style/style_thrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_disable"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        tools:ignore="RtlSymmetry" />


</LinearLayout>
</layout>