<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/j_prio_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tax_loc_lable"
                    style="@style/style_sec_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/taxation_based_on_location" />

                <TextView
                    android:id="@+id/loc_txt"
                    style="@style/subtext_style"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/tax_bck_lay"
                    android:drawableEnd="@drawable/ic_down_arrow_24"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:drawableTint="@color/white"
                    android:paddingRight="5dp"
                    android:text="@string/select"
                    android:textColor="@color/white"
                    tools:ignore="UnusedAttribute" />
                <!--
                -->
                <TextView
                    android:id="@+id/remove_txt_loc"
                    style="@style/subtext_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/remove" />
            </LinearLayout>


        </RelativeLayout>

        <com.eot_app.utility.util_interfaces.NoDefaultSpinner
            android:id="@+id/loc_tax_dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:popupBackground="@drawable/popupbg"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/listItem_invoice_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/list_item_invoice_count"
                style="@style/style_thrid_thrd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:text="10"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_update"
                android:visibility="gone"
                style="@style/subtext_style"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:background="@drawable/tax_bck_lay"
                android:gravity="center"
                android:drawableTint="@color/white"
                android:text="@string/update"
                android:layout_toStartOf="@+id/rm_invice_im"
                android:textColor="@color/white"
                tools:ignore="RelativeOverlap,UnusedAttribute" />

            <ImageView
                android:id="@+id/rm_invice_im"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/ic_delete_invoce_item"
                tools:ignore="ContentDescription" />
        </RelativeLayout>


        <LinearLayout
            android:layout_above="@+id/addInvoiceItem_btn"
            android:id="@+id/layouts"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listItem_invoice_layout"
            android:orientation="vertical">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_invoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/empty_invoice_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl"
            android:layout_centerInParent="true"
            android:background="@color/recyclerview"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_no_jobs_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/empty_inv_txt"
                style="@style/style_sub_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:id="@+id/addInvoiceItem_btn"
            style="@style/style_sec"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_field_height"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/submit_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible" />


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>